// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ratings component renders correctly 1`] = `
<div
  className="ratings"
>
  <h4>
    Ratings & Reviews
  </h4>
  <div
    className="ratings-summary"
  >
    <h2>
      3.5
    </h2>
    <p
      className="star-rating"
    >
      * * * * *
    </p>
    <p>
      100% of the reviews recommend this product
    </p>
  </div>
  <div
    className="ratings-breakdown"
  >
    <div>
      5 stars ------------
    </div>
    <div>
      4 stars ------------
    </div>
    <div>
      3 stars ------------
    </div>
    <div>
      2 stars ------------
    </div>
    <div>
      1 stars ------------
    </div>
  </div>
  <div
    className="ratings-product-breakdown"
  >
    Ratings Product Breakdown Placeholder
  </div>
</div>
`;

exports[`RatingsWidget component renders correctly 1`] = `
<div
  className="ratings-and-reviews"
>
  <div
    className="ratings"
  >
    <h4>
      Ratings & Reviews
    </h4>
    <div
      className="ratings-summary"
    >
      <h2>
        3.5
      </h2>
      <p
        className="star-rating"
      >
        * * * * *
      </p>
      <p>
        100% of the reviews recommend this product
      </p>
    </div>
    <div
      className="ratings-breakdown"
    >
      <div>
        5 stars ------------
      </div>
      <div>
        4 stars ------------
      </div>
      <div>
        3 stars ------------
      </div>
      <div>
        2 stars ------------
      </div>
      <div>
        1 stars ------------
      </div>
    </div>
    <div
      className="ratings-product-breakdown"
    >
      Ratings Product Breakdown Placeholder
    </div>
  </div>
  <div
    className="reviews"
  >
    <div
      className="reviews-sorting"
    >
      <label
        htmlFor="sorting-option"
      >
        0
         reviews, sorted by 
      </label>
      <select
        name="sorting-option"
        onChange={[Function]}
      >
        <option
          value="relevant"
        >
          relevant
        </option>
        <option
          value="helpful"
        >
          helpful
        </option>
        <option
          value="newest"
        >
          newest
        </option>
      </select>
    </div>
    <div
      className="reviews-list"
    />
    <div
      className="reviews-buttons"
    >
      <button>
        ADD A REVIEW +
      </button>
    </div>
  </div>
</div>
`;

exports[`ReviewTile component renders correctly 1`] = `
<div
  className="review-tile"
>
  <div
    className="review-header"
  >
    <div
      className="star-rating"
    >
      * * * * *
    </div>
    <div
      className="right-corner"
    >
      shortandsweeet, April 13, 2019
    </div>
  </div>
  <h3
    className="review-summary"
  >
    I'm enjoying wearing these shades
  </h3>
  <div
    className="review-main"
  >
    <div
      className="review-body"
    >
      <p>
        Comfortable and practical.
      </p>
    </div>
    <div
      className="thumbnail-display"
    >
      <div>
        <img
          alt="Review photo 1 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_1"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
      <div>
        <img
          alt="Review photo 2 submitted by: shortandsweeet"
          className="review-image"
          id="shortandsweeet_2"
          onClick={[Function]}
          src="https://images.unsplash.com/photo-1560570803-7474c0f9af99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80"
        />
      </div>
    </div>
    <div
      className="recommend"
    >
      ☑ I recommend this product
    </div>
    <div
      className="review-helpfulness-voting"
    >
      <p>
        Helpful? 
        <a
          onClick={[Function]}
        >
           Yes
        </a>
         (
        5
        )
      </p>
    </div>
  </div>
</div>
`;

exports[`Reviews component renders correctly 1`] = `
<div
  className="reviews"
>
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      5
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>
  <div
    className="reviews-list"
  />
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      MORE REVIEWS
    </button>
    <button>
      ADD A REVIEW +
    </button>
  </div>
</div>
`;

exports[`ReviewsList component renders correctly 1`] = `
Array [
  <div
    className="reviews-sorting"
  >
    <label
      htmlFor="sorting-option"
    >
      5
       reviews, sorted by 
    </label>
    <select
      name="sorting-option"
    >
      <option
        value="relevant"
      >
        relevant
      </option>
      <option
        value="helpful"
      >
        helpful
      </option>
      <option
        value="newest"
      >
        newest
      </option>
    </select>
  </div>,
  <div
    className="reviews-list"
  />,
  <div
    className="reviews-buttons"
  >
    <button
      onClick={[Function]}
    >
      MORE REVIEWS
    </button>
    <button>
      ADD A REVIEW +
    </button>
  </div>,
]
`;

exports[`ReviewsSorting component renders correctly 1`] = `
<div
  className="reviews-sorting"
>
  <label
    htmlFor="sorting-option"
  >
     reviews, sorted by 
  </label>
  <select
    name="sorting-option"
  >
    <option
      value="relevant"
    >
      relevant
    </option>
    <option
      value="helpful"
    >
      helpful
    </option>
    <option
      value="newest"
    >
      newest
    </option>
  </select>
</div>
`;
